# laser_open_vins_core

./: .gitignore  .gitman.yml  README.md
ros_packages/: laser_vins_imu_filter  laser_vins_republisher
ros_packages/laser_open_vins_core/: CMakeLists.txt  package.xml
ros_packages/laser_open_vins_core/config/: bluefox_simulation.yaml  rs_d435i.yaml
ros_packages/laser_open_vins_core/launch/: open_vins.launch.py  open_vins_d435i.launch.py  open_vins_simulation_realsense.launch.py  open_vins_simulation_vio.launch.py  plotjuggler.launch.py  rs_d435i.launch.py  rviz.launch.py  vins_static_transformer_d435i.launch.py  vio_realsense.launch.py  vio_simulation.launch.py
ros_packages/laser_open_vins_core/params/: rs_d435i.yaml
ros_packages/laser_open_vins_core/params/bluefox_simulation/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
ros_packages/laser_open_vins_core/params/rs_238222072435/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
ros_packages/laser_open_vins_core/params/rs_243522071667/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
ros_packages/laser_open_vins_core/params/rs_244622073910/: kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
ros_packages/laser_open_vins_core/params/simulation_realsense/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
ros_packages/laser_open_vins_core/params/simulation_vio/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
ros_packages/laser_open_vins_core/plotjuggler/: imu_layout.xml
ros_packages/laser_open_vins_core/rviz/: default.rviz
ros_packages/laser_open_vins_core/scripts/: refactor_plotjuggler_config.sh  refactor_rviz_config.sh
ros_packages/laser_open_vins_core/sessions/play_rosbag/: session.yml
ros_packages/laser_open_vins_core/sessions/record_rosbag/: .tmuxinator.yml  session.yml  start.sh
ros_packages/laser_open_vins_core/tmux/bluefox_simulation/: .tmuxinator.yml  session.yml
ros_packages/laser_open_vins_core/tmux/bluefox_simulation/configs/: estimation_manager.yaml  spawn.yaml
ros_packages/laser_open_vins_core/tmux/realworld/rs_d435i/: session.yml  start.sh  tmux.sh
